--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,7 @@
-<%= form_tag posts_path do %>
-  <label>Post title:</label><br>
-  <%= text_field_tag :title %><br>
-
-  <label>Post Description</label><br>
-  <%= text_area_tag :description %><br>
-
-  <%= submit_tag "Submit Post" %>
+<h1> Form </h1>
+<%= form_for @post do |f| %>
+  <%= f.label 'Post Title' %>
+  <%= f.text_field 'title' %>
+  <%= f.text_field 'description' %>
+  <%= f.submit %>
 <% end %>
